// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/Base/Button Default 1`] = `
<div
  class="Storybook"
>
  <div
    class="StorybookSection"
  >
    <div
      class="StorybookSection__Header"
    >
      Primary Buttons
    </div>
     
    <div
      class="StorybookSection__Body"
    >
      <div
        class="StorybookSection__Label"
      >
        Large
      </div>
       
      <!--function (a, b, c, d) {
    return createElement(vm, a, b, c, d, true);
  }-->
       
      <div
        class="StorybookSection__Label"
      >
        Midium
      </div>
       
      <!--function (a, b, c, d) {
    return createElement(vm, a, b, c, d, true);
  }-->
       
      <div
        class="StorybookSection__Label"
      >
        Small
      </div>
       
      <!--function (a, b, c, d) {
    return createElement(vm, a, b, c, d, true);
  }-->
    </div>
  </div>
</div>
`;

exports[`Storyshots components/Base/Button Disabled 1`] = `
<div
  class="Storybook"
>
  <div
    class="StorybookSection"
  >
    <div
      class="StorybookSection__Header"
    >
      Primary Buttons
    </div>
     
    <div
      class="StorybookSection__Body"
    >
      <div
        class="StorybookSection__Label"
      >
        Large
      </div>
       
      <!--function (a, b, c, d) {
    return createElement(vm, a, b, c, d, true);
  }-->
       
      <div
        class="StorybookSection__Label"
      >
        Midium
      </div>
       
      <!--function (a, b, c, d) {
    return createElement(vm, a, b, c, d, true);
  }-->
       
      <div
        class="StorybookSection__Label"
      >
        Small
      </div>
       
      <!--function (a, b, c, d) {
    return createElement(vm, a, b, c, d, true);
  }-->
    </div>
  </div>
</div>
`;

exports[`Storyshots components/Base/Pager Default 1`] = `
<div
  class="Storybook"
>
  <div
    class="StorybookSection"
  >
    <div
      class="StorybookSection__Header"
    >
      Pager
    </div>
     
    <div
      class="StorybookSection__Body dark"
    >
      <div
        class="wrapper"
        style="width: 1400px;"
      >
        <div
          style="color: rgb(255, 255, 255); margin-bottom: 16px; font-size: 18px; font-weight: bold;"
        >
          Current Page: 1
        </div>
         
        <!--function (a, b, c, d) {
    return createElement(vm, a, b, c, d, true);
  }-->
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots components/Modules/Movies/Poster Default 1`] = `
<div
  class="Storybook"
>
  <div
    class="StorybookSection"
  >
    <div
      class="StorybookSection__Header"
    >
      Poster
    </div>
     
    <div
      class="StorybookSection__Body"
    >
      <div
        class="wrapper"
        style="width: 320px;"
      >
        <!--function (a, b, c, d) {
    return createElement(vm, a, b, c, d, true);
  }-->
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots components/Modules/Movies/PosterList Default 1`] = `
<div
  class="Storybook"
>
  <div
    class="StorybookSection"
  >
    <div
      class="StorybookSection__Header"
    >
      Poster
    </div>
     
    <div
      class="StorybookSection__Body dark"
    >
      <div
        class="wrapper"
        style="width: 1400px;"
      >
        <!--function (a, b, c, d) {
    return createElement(vm, a, b, c, d, true);
  }-->
      </div>
    </div>
  </div>
</div>
`;
